deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: restate
spec:
  strategy:
    type: Recreate
  replicas: 1
  template:
    spec:
      hostNetwork: true
      containers:
        - image: quay.io/kennedn/restate:latest
          name: restate
          ports:
            - containerPort: 8080
          securityContext:
            privileged: true
