service.yaml
apiVersion: v1
kind: Service
metadata:
  name: restate
spec:
  ports:
  - port: 80
    targetPort: 8080
