ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: restate
  annotations:
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: restate-basic-auth
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required'
    nginx.ingress.kubernetes.io/server-snippet: |
      satisfy any;
      allow 192.168.1.0/24;
      deny all;
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - api.kennedn.com
    secretName: restate
  ingressClassName: public
  rules:
  - host: api.kennedn.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: restate
            port:
              number: 80
